correct gap when adding multiple project cards

--- a/src/todo-list.css
+++ b/src/todo-list.css
@@ -324,7 +324,7 @@ textarea {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 1fr 1fr;
-  gap: 20px;
+  gap: 30px;
   padding: 10px;
   border-radius: 4px;
 
